@@ -1,9 +1,3 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
-<pkgmetadata>
-	<use>
-		<flag name='system-jars'>
-			Use system jars as much as possible.
-		</flag>
-	</use>
-</pkgmetadata>
+<pkgmetadata/>
